...
        switch self {
        case .activity: return "Aktivitem"
        case .notebook: return RDLocalization.string("localizable.nova.navigation.notebook", table: .localizable, fallback: "Kişisel Not Defteri")
        case .newNote: return RDLocalization.string("localizable.nova.navigation.not.ekle.404f9b06", table: .localizable, fallback: "Not ekle")
        case .newCompany: return RDLocalization.string("localizable.nova.navigation.firma.ekle.b4073323", table: .localizable, fallback: "Firma Ekle")
        case .periodicChecks: return RDLocalization.string("localizable.nova.navigation.periodic.checks", table: .localizable, fallback: "Periyodik Kontroller")
        case .riskAssessments: return RDLocalization.string("localizable.nova.navigation.risk.assessments", table: .localizable, fallback: "Risk Değerlendirmesi")
        case .checklists: return RDLocalization.string("localizable.nova.navigation.checklists", table: .localizable, fallback: "Kontrol Listeleri")
        case .emergencyPlans: return RDLocalization.string("localizable.nova.navigation.emergency.plans", table: .localizable, fallback: "Acil Durum Planları")
        case .drills: return RDLocalization.string("localizable.nova.navigation.drills", table: .localizable, fallback: "Tatbikatlar")
        case .ppeHandovers: return RDLocalization.string("localizable.nova.navigation.kkd.zimmet.formu.ornegi.58655993", table: .localizable, fallback: "KKD Zimmet Formu Örneği")
        case .appointments: return RDLocalization.string("localizable.nova.navigation.appointments", table: .localizable, fallback: "Atama ve Temsilciler")
        case .annualWorkPlans: return RDLocalization.string("localizable.nova.navigation.annual.work.plans", table: .localizable, fallback: "Yıllık Çalışma Planı")
...
